package common.protocol.L2M;

message QueryRoleInfo
{
	required int64 roleid = 1;
	repeated int64 queryid_list = 3;
}
